update spark cases