@@ -75,39 +75,13 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven-surefire-plugin.version}</version>
-          <configuration>
-            <argLine>
-              -XX:+EnableDynamicAgentLoading
-            </argLine>
-            <includes>
-              <include>**/*Test.*</include>
-              <include>**/*Suite.*</include>
-              <include>**/*Spec.*</include>
-            </includes>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.8.0</version>
-          <configuration>
-            <source>${java.source.version}</source>
-            <target>${java.target.version}</target>
-            <useIncrementalCompilation>false</useIncrementalCompilation>
-            <compilerArgs>
-              <arg>-Xpkginfo:always</arg>
-            </compilerArgs>
-          </configuration>
-        </plugin>
-        <plugin>
           <groupId>net.alchim31.maven</groupId>
           <artifactId>scala-maven-plugin</artifactId>
           <version>4.9.2</version>
           <executions>
             <execution>
+              <id>scala-compile-first</id>
+              <phase>process-resources</phase>
               <goals>
                 <goal>compile</goal>
                 <goal>testCompile</goal>
@@ -135,6 +109,58 @@
               <arg>--add-opens=java.base/sun.util.calendar=ALL-UNNAMED</arg>
               <arg>--add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED</arg>
             </jvmArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.8.0</version>
+          <executions>
+            <execution>
+              <id>java-compile-second</id>
+              <phase>compile</phase>
+              <goals>
+                <goal>compile</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <source>${java.source.version}</source>
+            <target>${java.target.version}</target>
+            <useIncrementalCompilation>false</useIncrementalCompilation>
+            <compilerArgs>
+              <arg>-Xpkginfo:always</arg>
+              <arg>--enable-preview</arg>
+            </compilerArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>
+              -XX:+EnableDynamicAgentLoading
+              --add-opens=java.base/java.lang=ALL-UNNAMED
+              --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
+              --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+              --add-opens=java.base/java.io=ALL-UNNAMED
+              --add-opens=java.base/java.net=ALL-UNNAMED
+              --add-opens=java.base/java.nio=ALL-UNNAMED
+              --add-opens=java.base/java.util=ALL-UNNAMED
+              --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+              --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+              --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+              --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
+              --add-opens=java.base/sun.security.action=ALL-UNNAMED
+              --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
+              --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+            </argLine>
+            <includes>
+              <include>**/*Test.*</include>
+              <include>**/*Suite.*</include>
+              <include>**/*Spec.*</include>
+            </includes>
           </configuration>
         </plugin>
         <plugin>
@@ -173,10 +199,10 @@
   </build>
   <profiles>
     <profile>
-      <id>java11</id>
+      <id>java21</id>
       <activation>
         <activeByDefault>true</activeByDefault>
-        <jdk>11</jdk>
+        <jdk>21</jdk>
       </activation>
     </profile>
   </profiles>
